fixed lg responsive bug and arrows on mobile with vh relative positioning

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,9 @@ body {
 
 #candle {
   z-index: -5;
+  position: relative; background: url('../images/candle.gif') no-repeat center;
+  background-size: contain;
+  height: 80vh;
 }
 
 #downarrow {
@@ -152,7 +155,7 @@ h1 {
 
 .project {
   margin-top: 30px;
-  max-width: 350px;
+  max-width: 300px;
   max-height: 300px;
   box-shadow: 0 17px 10px -10px hsla(0, 0%, 20%, 0.4);
   border-radius: 3px;
